# commitizen-playground

./: CHANGELOG.md  pyproject.toml
.github/workflows/: dumpversion.yaml
