[tool.poetry]
name = "commitizen-playground"
version = "0.1.1"
description = ""
authors = ["heumsi <heumsi@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.12.1"

[tool.poetry.dev-dependencies]
commitizen = "^2.17.6"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
